Fix border clipping

--- a/src/components/UnsplashSection.module.scss
+++ b/src/components/UnsplashSection.module.scss
@@ -115,7 +115,13 @@
   display: flex;
   gap: var(--spacing-md);
   z-index: 300;
-  overflow-x: hidden;
+  overflow: hidden;
+  margin-top: calc(-1 * var(--spacing-lg));
+  padding-top: var(--spacing-lg);
+  margin-bottom: calc(-1 * var(--spacing-lg));
+  padding-bottom: var(--spacing-lg);
+  margin-left: calc(var(--spacing-lg) * -1);
+  padding-left: var(--spacing-lg);
   position: relative;
 
   & .atroposImage {
@@ -159,6 +165,8 @@
     border-radius: 999px;
     padding: var(--spacing-sm) var(--spacing-xs);
     text-decoration: none;
+    transition-property: color, background-color;
+    transition-duration: 0.3s;
 
     &:hover,
     &:focus-visible {
